--- a/comprar-6.html
+++ b/comprar-6.html
@@ -66,15 +66,13 @@
                         <div class="col-12 col-md-5 mt-2 mb-4">
                             <div data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 <div class="card shadow p-3">
-                                    <img src="https://www.fantoy.com.br/media/catalog/product/cache/5070b15b05522f191912dd31c57262ab/l/u/luffy-min_2.jpg"
+                                    <img src="https://static3.tcdn.com.br/img/img_prod/460977/s_h_figuarts_street_fighter_iv_ryu_bandai_17287_1_20201211172755.jpg"
                                         class="card-img-top" alt="...">
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-4 mt-2 align-self-center">
-                            <h5 style="font-size: 2rem;">MONKEY D. LUFFY (WT100 COMMEMORATIVE:
-                                DAIKAIZOKU
-                                HYAKKEI)- FIGUARTSZERO - ONE PIECE - BANDAI</h5>
+                            <h5 style="font-size: 2rem;">Boneco Ryu: Street Fighter V S.H Figuarts - Bandai</h5>
                             <p style="font-size: 2rem;text-align: center; margin: 2rem 0 0 0;"><b
                                     class="text-success">R$ 1.199,00</b></p>
                             <p style="font-size: .8rem;text-align: center;">Até 12x sem Juros</p>
@@ -105,15 +103,15 @@
                                         </div>
                                         <div class="carousel-inner">
                                             <div class="carousel-item">
-                                                <img src="https://www.sideshow.com/cdn-cgi/image/width=720,quality=80,f=auto/https://www.sideshow.com/storage/product-images/909378/monkey-d-luffy-wt100-commemorative-eiichiro-oda-illustration-daikaizoku-hyakkei_one-piece_gallery_614a6bbca84b6.jpg"
+                                                <img src="https://static3.tcdn.com.br/img/img_prod/460977/s_h_figuarts_street_fighter_iv_ryu_bandai_17287_5_20201211172757.jpg"
                                                     class="d-block w-100" alt="...">
                                             </div>
                                             <div class="carousel-item active">
-                                                <img src="https://www.sideshow.com/cdn-cgi/image/width=720,quality=80,f=auto/https://www.sideshow.com/storage/product-images/909378/monkey-d-luffy-wt100-commemorative-eiichiro-oda-illustration-daikaizoku-hyakkei_one-piece_gallery_614a6bbcee688.jpg"
+                                                <img src="https://static3.tcdn.com.br/img/img_prod/460977/s_h_figuarts_street_fighter_iv_ryu_bandai_17287_3_20201211172756.jpg"
                                                     class="d-block w-100" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="https://www.sideshow.com/cdn-cgi/image/width=720,quality=80,f=auto/https://www.sideshow.com/storage/product-images/909378/monkey-d-luffy-wt100-commemorative-eiichiro-oda-illustration-daikaizoku-hyakkei_one-piece_gallery_614a6bbd8a69c.jpg"
+                                                <img src="https://static3.tcdn.com.br/img/img_prod/460977/s_h_figuarts_street_fighter_iv_ryu_bandai_17287_4_20201211172757.jpg"
                                                     class="d-block w-100" alt="...">
                                             </div>
                                         </div>
@@ -143,18 +141,27 @@
                     <div class="row">
                         <div class="col-4 mt-4  mb-4">
                             <figure class="figure">
-                                <img src="https://www.sideshow.com/cdn-cgi/image/width=480,quality=80,f=auto/https://www.sideshow.com/storage/product-images/909378/monkey-d-luffy-wt100-commemorative-eiichiro-oda-illustration-daikaizoku-hyakkei_one-piece_silo.png"
+                                <img src="https://static3.tcdn.com.br/img/img_prod/460977/s_h_figuarts_street_fighter_iv_ryu_bandai_17287_2_20201211172756.jpg"
                                     class="figure-img img-fluid rounded" alt="...">
                                 <figcaption class="figure-caption text-center">Monkey D. Luffy</figcaption>
                             </figure>
                         </div>
                         <div class="col-5 md-4 mt-5">
                             <h1 class="titulo">SOBRE ESTE CONJUNTO COLECIONÁVEL</h1>
-                            <p class="descricao">Baseado na dinâmica ilustração WT100 de Eiichiro Oda comemorando Monkey
-                                D. Luffy
-                                conquistando o primeiro lugar na primeira votação global de popularidade mundial de
-                                personagens de One Piece "WORLD TOP 100", Monkey D. Luffy se junta ao Figuarts ZERO em
-                                um novo tamanho especial! Este conjunto especial inclui uma mini figura Chopper. </p>
+                            <p class="descricao">
+                                Contém:
+                                <br>
+                                Ryu em sua versão do Street Fighter V!
+                                <br>
+                                Dois Rostos de ação.
+                                <br>
+                                Um par de mãos intercambiaveis.
+                                <br>
+                                Um Effect do Haduken.
+                                <br>
+                                Detalhes idênticos aos do jogo
+                                <br>
+                            </p>
                             <br>
                             <p class="descricao">Adicione este conjunto à sua coleção One Piece hoje!</p>
                         </div>
@@ -165,7 +172,7 @@
                     <div class="row">
                         <div class="col-12 mt-3 mb-4" style="text-align: center;">
                             <h1 class="mb-3">Veja Mais</h1>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/nb4aKz6NuEU"
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/LlqO4iaQvLQ"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
@@ -174,12 +181,51 @@
                 </div>
                 <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab"
                     tabindex="0">
-                    <div class="row">
+                    <div class="row justify-content-center mt-5">
                         <div class="col-12 mt-3 mb-3" style="text-align: center;">
                             <h1>Você pode Gostar</h1>
                         </div>
-                        <div class="col-12 col-md-3 mt-2 mb-4">
+                        <div class="col-12 col-md-3 mt-2 mb-3">
                             <div class="card shadow p-3">
+                                <img src="https://static3.tcdn.com.br/img/img_prod/460977/action_figure_homem_de_ferro_iron_man_mark_v_homem_de_ferro_2_iron_man_2_marvel_escala_1_10_zhong_do_95191_1_d675948b88920f2b5f26a2411d43fb32.jpg"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title" style="font-size: 1rem;">Action Figure Homem de Ferro
+                                        Iron Man Mark 5 V :
+                                        Vingadores Avengers Escala 1/10 Marvel Disney - ZD Toys
+                                    </h5>
+                                    <p class="card-text"
+                                        style="font-size: 1.5rem;text-align: center; margin: 2rem 0 0 0;"><b
+                                            class="text-success">R$ 399,00</b></p>
+                                    <p class="card-text" style="font-size: .8rem;text-align: center;">Até 12x
+                                        sem
+                                        Juros</p>
+                                    <a href="comprar-2.html" class="btn btn-dark">Comprar</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-3 mt-2 mb-3">
+                            <div class="card shadow p-3">
+                                <img src="https://static3.tcdn.com.br/img/img_prod/460977/action_figure_thor_vingadores_avengers_marvel_kai_escala_1_6_play_arts_ev_80459_1_d2e678e9af9d514d4eba54e94a233574.jpg"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title" style="font-size: 1rem;">Action Figure Thor:
+                                        Vingadores
+                                        Avengers Marvel
+                                        Escala 1/6 Play Arts Kai
+                                    </h5>
+                                    <p class="card-text"
+                                        style="font-size: 1.5rem;text-align: center; margin: 2rem 0 0 0;"><b
+                                            class="text-success">R$ 449,95</b></p>
+                                    <p class="card-text" style="font-size: .8rem;text-align: center;">Até 12x
+                                        sem
+                                        Juros</p>
+                                    <a href="comprar-3.html" class="btn btn-dark">Comprar</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-3 mt-2 mb-3">
+                            <div class="card">
                                 <img src="https://www.fantoy.com.br/media/catalog/product/cache/5070b15b05522f191912dd31c57262ab/l/u/luffy-min_2.jpg"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
@@ -188,11 +234,29 @@
                                         HYAKKEI)- FIGUARTSZERO - ONE PIECE - BANDAI</h5>
                                     <p class="card-text"
                                         style="font-size: 1.5rem;text-align: center; margin: 2rem 0 0 0;"><b
-                                            class="text-success">R$ 1.199,00</b></p>
-                                    <p class="card-text" style="font-size: .8rem;text-align: center;">Até 12x sem
-                                        Juros
-                                    </p>
+                                            class="text-success">R$ 379,00</b></p>
+                                    <p class="card-text" style="font-size: .8rem;text-align: center;">Até 12x
+                                        sem
+                                        Juros</p>
                                     <a href="comprar-1.html" class="btn btn-dark">Comprar</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-3 mt-2 mb-3">
+                            <div class="card shadow p-3">
+                                <img src="https://static3.tcdn.com.br/img/img_prod/460977/action_figure_estatua_batman_vs_coringa_arkham_origens_escala_1_6_estilo_hot_toys_mkp_105903_1_795e10ae394429ca12d6ca1e04c815e8.jpg"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title" style="font-size: 1rem;">Action Figure Estátua Batman Vs
+                                        Coringa: Arkham
+                                        Origens Escala 1/6 Estilo Hot Toys - MKP
+                                    </h5>
+                                    <p class="card-text"
+                                        style="font-size: 1.5rem;text-align: center; margin: 2rem 0 0 0;"><b
+                                            class="text-success">R$ 1.199,00</b></p>
+                                    <p class="card-text" style="font-size: .8rem;text-align: center;">Até 12x sem Juros
+                                    </p>
+                                    <a href="comprar-4.html" class="btn btn-dark">Comprar</a>
                                 </div>
                             </div>
                         </div>
